--- a/includes/header.css
+++ b/includes/header.css
@@ -224,3 +224,17 @@ body {
     font-weight: 400;
     border-radius: 0px;
 }
+
+
+@media (max_width:1162) {
+    #up-nav .wapper {
+        width: 100%;
+        padding: 0 30px;
+        /* margin: auto; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 50px;
+    }
+    
+}
