--- a/includes/style.css
+++ b/includes/style.css
@@ -9,9 +9,11 @@
 }
 
 body {
+  width: 100%;
   background-color: white;
   overflow-x: hidden;
   margin: 0;
+  min-width: 700;
   
 }
 
@@ -154,13 +156,34 @@ body {
 
 }
 
+@media (max-width:799px)
+{
+  #feature-shop{
+    justify-content: center;
+  }
+  
+  #feature-shop .fe-box {
+    
+    margin: 15px 15px;
+}
+
+  .section-p1{
+  padding: 40px 40px;
+}
+
+
+
+}
+
+
+
 /* feature-shop end */
 
 
 /* feature-product */
 
 .section-p2{
-  padding: 40px 130px;
+  padding: 40px 160px;
 
 }
 
@@ -175,6 +198,7 @@ body {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  cursor: pointer;
   
 }
 
@@ -187,6 +211,7 @@ body {
   box-shadow:20px 20px 30px rgba(0, 0, 0, 0.02) ;
   margin: 15px 0;
   transition: 0.2s ease;
+  position: relative;
 
 }
 
@@ -218,12 +243,43 @@ body {
   font-size: 12px;
 }
 
-#feature-product .pro .des h4{
+.pro .des h4{
   padding-top: 7px;
   font-size: 15px;
   font-weight: 700;
 
 }
+
+@media (max-width: 799px){
+  .section-p2{
+    padding: 40px 80px;
+  
+  }
+
+
+}
+
+
+@media (max-width: 596px){
+  .section-p2{
+    padding: 20px 40px;
+  
+  }
+
+}
+
+
+@media (max-width: 423px){
+  .section-p2{
+    padding: 20px 20px;
+  
+  }
+
+}
+
+
+
+
 
 /* products 2 */
 
@@ -266,7 +322,7 @@ body {
 
 }
 
-#feature-product2 .pro2 .des{
+#feature-product2 .pro2 .des2{
   text-align: start;
   padding: 10px 0;
 }
@@ -277,7 +333,7 @@ body {
   font-size: 14px;
 }
 
-/* star iconn */
+ /* star iconn */
 #feature-product2 .pro2 .des2 i{
   font-size: 12px;
 }
@@ -288,6 +344,148 @@ body {
   font-weight: 700;
 
 }
+.add-cart-btn {
+  background-color: #000;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  display: block;
+  margin-top: 10px;
+  text-decoration: none;
+}
+
+.add-cart-btn:hover {
+  background-color: #1a1a1a;
+}
+
+
+
+
+/* end */
+
+/* slider  */
+#feature-product3 {
+  padding: 20px;
+  position: relative;
+  overflow: hidden;
+
+}
+
+#feature-product3 .pro3-container3{
+  
+  padding-top: 15px;
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  justify-content: space-between;
+
+}
+
+#feature-product3 .pro3-container3::-webkit-scrollbar{
+  display: none;
+
+}
+
+#feature-product3 .product-card{
+  width: 23%;
+  min-width: 240px;
+  padding: 10px 12px;
+  border: 1px solid #cce7d0;
+  cursor: pointer;
+  box-shadow:20px 20px 30px rgba(0, 0, 0, 0.02) ;
+  margin-right: 40px;
+  transition: 0.2s ease;
+
+}
+
+#feature-product3 .product_image{
+  width: 100%;
+  /* height: ; */
+  overflow: hidden;
+  height: 200px;
+
+}
+
+
+
+#feature-product3 .pro3:hover{
+  box-shadow:20px 20px 30px rgba(0, 0, 0, 0.06) ;
+
+
+}
+
+#feature-product3 .pro3 img{
+  width: 100%;
+  border-radius: 10px;
+
+}
+
+#feature-product3 .pro3 .des3{
+  text-align: start;
+  padding: 10px 0;
+}
+
+#feature-product3 .pro3 .des3 h5{
+  padding-top: 7px;
+  color: #1a1a1a;
+  font-size: 14px;
+}
+
+/* star iconn */
+#feature-product3 .pro3 .des3 i{
+  font-size: 12px;
+}
+
+#feature-product3 .pro3 .des3 h4{
+  padding-top: 7px;
+  font-size: 15px;
+  font-weight: 700;
+
+}
+
+#feature-product3 .pro3 .des3 .card-btn{
+  position:absolute;
+  bottom:10px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  width:90%;
+  text-transform: capitalize;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  transition: 0.5s;
+  cursor: pointer;
+  opacity: 0;
+  background: #fff;
+}
+
+#feature-product3 .pro3:hover .card-btn{
+  opacity: 1;
+
+}
+
+.card-btn:hover{
+  background: #333;
+  color: #fff;
+}
+
+#feature-product3 .pre-btn,.nxt-btn{
+  border: none;
+  width: 10px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ background: linear-gradient(90deg,rgba(255,255,255,0)0%,#fff 100%);
+  cursor: pointer;
+  z-index: 9;
+}
+
+
+
 
 
 
@@ -301,16 +499,17 @@ body {
             justify-content: center;
             align-items: center;
             background-color: rgba(255, 255, 255, 0.9);
+            padding-top: 100px;
             
 
 }
 .login-container .form-container {
   display: flex;
-  
   background-color: #f3f4f6;
   border-radius: 1rem;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
-  max-width: 80%;
+  /* max-width: 80%; */
+  max-width: 900px;
   width: 100%;
   padding: 1rem; /* Adjusted padding */
   z-index: 1;
@@ -345,9 +544,9 @@ body {
 }
 
 .login-container .logo {
-  width: 100px;
+  width: 150px;
   height: auto;
-  margin-bottom: 0.5rem; /* Reduced margin */
+  margin-bottom: 2rem; /* Reduced margin */
 }
 
 .login-container .form-container h2 {
@@ -415,18 +614,18 @@ body {
 
 
 /* Customer sign up */
+
 .customer-signup {
 
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 100px;
 }
 
 .customer-signup .background-container {
   position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background-size: cover;
@@ -550,4 +749,152 @@ body {
   .submit-btn {
       font-size: 0.9rem; /* Adjusted font size */
   }
+}
+/* Customer signup end */
+
+
+/* Trader sign Up  */
+.trader-login {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 100px ;
+}
+
+.trader-login .background-container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  filter: blur(5px); /* Apply blur effect */
+  z-index: -1; /* Move behind other elements */
+}
+
+.trader-login .form-container {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.9); /* Use rgba for background color with transparency */
+  border-radius: 1rem;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  max-width: 900px;
+  width: 100%; /* Adjusted width */
+  padding: 1rem; /* Reduced padding */
+  z-index: 1; /* Move above background container */
+}
+
+.trader-login .left-side {
+  flex: 4;
+  padding: 1rem;
+  background-size: cover;
+  background-position: center;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.trader-login .left-side img {
+  max-width: 100%; /* Ensure the image fits within the container */
+  max-height: 100%; /* Ensure the image fits within the container */
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.trader-login .right-side {
+  flex: 5;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.trader-login .logo {
+  width: 150px;
+  height: auto;
+  margin-bottom: 0.5rem;
+}
+
+.trader-login .form-container h2 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+
+.trader-login .input-field {
+  border: 0.5px solid #FF6347;
+  border-radius: 0.5rem;
+  padding: 0.4rem;
+  margin-bottom: 0.75rem;
+  width: 100%;
+  transition: border-color 0.3s ease;
+}
+
+.trader-login .input-field:focus {
+  border-color: #FF6347;
+}
+
+.trader-login .checkbox-label {
+  color: #555;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.75rem;
+}
+
+.trader-login .checkbox-label input {
+  margin-right: 0.5rem;
+}
+
+.trader-login .submit-btn {
+  background-color: #f97316;
+  color: #ffffff;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1.1rem;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  width: 100%;
+  display: block;
+}
+
+.trader-login .submit-btn:hover {
+  background-color: #ed8936;
+}
+
+.trader-login .signin-link {
+  color: #f97316;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.trader-login .signin-link:hover {
+  color: #ed8936;
+}
+@media (max-width: 768px) {
+  .trader-login .left-side {
+      display: none; /* Hide on smaller screens */
+  }
+  .trader-login .right-side {
+      flex: 1; /* Occupy full width on smaller screens */
+  }
+  .trader-login .input-field,
+  .submit-btn {
+      font-size: 0.9rem; /* Adjusted font size */
+  }
+}
+
+/* trader-signUp end */
+
+
+/* terms and condition page */
+
+.terms_conditions_container{
+  padding: 40px 240px;
 }
