--- a/contactUs/styles.css
+++ b/contactUs/styles.css
@@ -99,16 +99,22 @@ textarea {
 @media only screen and (max-width: 768px) {
     .contactus-container {
         flex-direction: column;
+        align-items: center; /* Center content vertically */
     }
     
     .contactus-container .left-container,
-    .right-container {
+    .contactus-container .right-container {
         width: 100%;
     }
     
     .contactus-container .right-container {
         margin-left: 0; /* Reset margin for right container */
     }
+    
+    .contactus-container input[type="submit"] {
+        width: 100%; /* Make submit button full width */
+    }
 }
+
 
     
